Remove unneeded / from path